# Azure-Vitality

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: common.rs  main.rs  translate.rs  visit.rs
text/: c_vis600.itp  ch40004.itc  ed7004.opus  ed7s1100.opus  ed7s1101.opus  ed7s1102.opus  ed7s1104.opus  quest125.txt  quest138.txt  quest157.txt  quest158.txt  quest159.txt
