[package]
name = "azure-vitality"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
themelios = { git = "https://github.com/Kyuuhachi/Aureole", rev = "e591f99" }
calmare = { git = "https://github.com/Kyuuhachi/Aureole", rev = "e591f99" }
extend = "1.1.2"
derive_more = "0.99.17"
regex = "1.7.0"
lazy_static = "1.4.0"
serde_json = { version = "1.0.91", features = ["preserve_order"] }
clap = { version = "4.2.1", features = ["derive"] }

[profile.dev.package.'*']
opt-level = 3
